update post and calendar.js
